k8s/src/resources/heimdall/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-ui-svc
spec:
  ports:
    - name: 80-tcp
      port: 80
