k8s/src/resources/heimdall/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: home.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: heimdall-ui-svc
                port:
                  name: 80-tcp
